--- a/realMiniProjet/Views/HandlingStudents/Delete.cshtml
+++ b/realMiniProjet/Views/HandlingStudents/Delete.cshtml
@@ -20,14 +20,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Niveau)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Niveau)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.AspNetUser.Email)
         </dt>
 
@@ -41,6 +33,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Filiere.Nom_filiere)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Level.Nom_niveau)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Level.Nom_niveau)
         </dd>
 
     </dl>
