--- a/realMiniProjet/Views/HandlingStudents/Details.cshtml
+++ b/realMiniProjet/Views/HandlingStudents/Details.cshtml
@@ -19,11 +19,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Niveau)
+            @Html.DisplayNameFor(model => model.AspNetUser.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Niveau)
+            @Html.DisplayFor(model => model.AspNetUser.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AspNetUser.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AspNetUser.LastName)
         </dd>
 
         <dt>
@@ -40,6 +48,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Filiere.Nom_filiere)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Level.Nom_niveau)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Level.Nom_niveau)
         </dd>
 
     </dl>
