--- a/realMiniProjet/Views/Levels/Create.cshtml
+++ b/realMiniProjet/Views/Levels/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model realMiniProjet.Models.Entities.Filiere
+﻿@model realMiniProjet.Models.Entities.Level
 
 @{
     ViewBag.Title = "Create";
@@ -11,14 +11,14 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Filiere</h4>
+        <h4>Level</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Nom_filiere, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Nom_niveau, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nom_filiere, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nom_filiere, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Nom_niveau, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nom_niveau, "", new { @class = "text-danger" })
             </div>
         </div>
 
