--- a/realMiniProjet/Views/Shared/_LoginPartial.cshtml
+++ b/realMiniProjet/Views/Shared/_LoginPartial.cshtml
@@ -16,13 +16,10 @@
 else
 {
 <ul class="nav navbar-nav navbar-right">
-    @if (ViewData["role"] == "ADMIN")
-    {
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
 
-    }
-
-    <li>@Html.ActionLink("Log in" + ViewData["role"], "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+   
+        <li>@Html.ActionLink("Register ", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>   
+    <li>@Html.ActionLink("Log in ", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
 
 </ul>
 }
