--- a/realMiniProjet/Views/HandlingProfessors/Index.cshtml
+++ b/realMiniProjet/Views/HandlingProfessors/Index.cshtml
@@ -14,8 +14,10 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-       
-      
+        <th>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
