--- a/realMiniProjet/Views/HandlingGroupes/Create.cshtml
+++ b/realMiniProjet/Views/HandlingGroupes/Create.cshtml
@@ -28,24 +28,18 @@
         <div class="form-group">
             @Html.Label("Id_filiere", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Id_fil", null, htmlAttributes: new { @class = "form-control", @id = "id_fil" })
+                @Html.DropDownList("Id_fil", null,"Choisissez une filière", htmlAttributes: new { @class = "form-control", @id = "id_fil" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Id_level", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Id_lev", null, htmlAttributes: new { @class = "form-control", @id = "id_lev" })
+                @Html.DropDownList("Id_lev", null,"Choisissez un niveau", htmlAttributes: new { @class = "form-control", @id = "id_lev" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Delais, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Delais, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Delais, "", new { @class = "text-danger" })
-            </div>
-        </div>
+       
         <div>
             <table id="tblStudent" class="table table-bordered table-striped table-responsive table-hover">
                 <thead>
