--- a/realMiniProjet/Views/HandlingStudents/Create.cshtml
+++ b/realMiniProjet/Views/HandlingStudents/Create.cshtml
@@ -14,7 +14,7 @@
     <h4>Student</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    
+
     <div class="form-group">
         @Html.LabelFor(model => model.Cne, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -36,13 +36,6 @@
         <div class="col-md-10">
             @Html.DropDownList("Id_niv", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Id_niv, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("userName", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.Editor("userName", null, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
@@ -70,7 +63,14 @@
     <div class="form-group">
         @Html.Label("Password", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.Editor("Password", null, new { htmlAttributes = new { @class = "form-control" } })
+            <input type="password" name="Password" class="form-control" />
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Phone number", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.Editor("phone", null, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
