--- a/realMiniProjet/Views/Shared/_Layout.cshtml
+++ b/realMiniProjet/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         if (User.IsInRole("ADMIN"))
                         {
                             <li>@Html.ActionLink("Home", "Index", "Admin")</li>
+                            <li>@Html.ActionLink("Report types", "Index", "TypeReports")</li>
+                            <li>@Html.ActionLink("Filières", "Index", "Filieres")</li>
+                            <li>@Html.ActionLink("Levels", "Index", "Levels")</li>
                             <li>@Html.ActionLink("Students", "Index", "HandlingStudents")</li>
                             <li>@Html.ActionLink("Professors", "Index", "HandlingProfessors")</li>
                             <li>@Html.ActionLink("Groupes", "Index", "HandlingGroupes")</li>
@@ -34,9 +37,16 @@
                         else if (User.IsInRole("PROFESSOR"))
                         {
                             <li>@Html.ActionLink("Home", "Index", "Professor")</li>
-                            <li>@Html.ActionLink("My groups", "MyGroups", "Professor")</li>
+                            <li>@Html.ActionLink("My groups", "MyGroups", "User")</li>
                             <li>@Html.ActionLink("Library", "Index", "LibraryController")</li>
-                           
+
+                        }
+                        else if (User.IsInRole("STUDENT"))
+                        {
+                            <li>@Html.ActionLink("Home", "Index", "STUDENT")</li>
+                            <li>@Html.ActionLink("My groups", "MyGroups", "User")</li>
+                            <li>@Html.ActionLink("Library", "Index", "LibraryController")</li>
+
                         }
                     }
 
