--- a/realMiniProjet/Views/TypeReports/Delete.cshtml
+++ b/realMiniProjet/Views/TypeReports/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model realMiniProjet.Models.Entities.Groupe
+﻿@model realMiniProjet.Models.Entities.Type_Reports
 
 @{
     ViewBag.Title = "Delete";
@@ -8,16 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Groupe</h4>
+    <h4>Type_Reports</h4>
     <hr />
     <dl class="dl-horizontal">
-      
         <dt>
-            @Html.DisplayNameFor(model => model.AspNetUser.Email)
+            @Html.DisplayNameFor(model => model.Type)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AspNetUser.Email)
+            @Html.DisplayFor(model => model.Type)
         </dd>
 
     </dl>
