--- a/realMiniProjet/Views/TypeReports/Edit.cshtml
+++ b/realMiniProjet/Views/TypeReports/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model realMiniProjet.Models.Entities.Groupe
+﻿@model realMiniProjet.Models.Entities.Type_Reports
 
 @{
     ViewBag.Title = "Edit";
@@ -11,16 +11,16 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Groupe</h4>
+        <h4>Type_Reports</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Id_type)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Id_prof, "Email Encadrant", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Id_prof", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id_prof, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
             </div>
         </div>
 
