--- a/realMiniProjet/Views/HandlingStudents/Index.cshtml
+++ b/realMiniProjet/Views/HandlingStudents/Index.cshtml
@@ -9,55 +9,69 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.AspNetUser.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AspNetUser.LastName)
-        </th>        
-        <th>
-            @Html.DisplayNameFor(model => model.Cne)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AspNetUser.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Filiere.Nom_filiere)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Level.Nom_niveau)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.AspNetUser.FirstName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AspNetUser.LastName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Cne)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AspNetUser.Email)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Filiere.Nom_filiere)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Level.Nom_niveau)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-    </td>
-</tr>
+<p>
+    @Html.ActionLink("Upload a list of students", "Index" ,"UploadStudents")
+</p>
+@if(Model.Count() == 0)
+{
+    <h1 class="text-center danger">No Data for now!!!</h1>
 }
+
+<table class="table">
+    @if (Model.Count() != 0)
+    {
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AspNetUser.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AspNetUser.LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cne)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AspNetUser.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Filiere.Nom_filiere)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Level.Nom_niveau)
+            </th>
+            <th></th>
+        </tr>
+    }
+
+
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUser.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUser.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cne)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUser.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Filiere.Nom_filiere)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Level.Nom_niveau)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
