--- a/realMiniProjet/Views/HandlingGroupes/Index.cshtml
+++ b/realMiniProjet/Views/HandlingGroupes/Index.cshtml
@@ -5,62 +5,70 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Groupes</h2>
 <div>
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-
-        <th>
-            @Html.DisplayName("Email Encadrant")
-        </th>
-
-        <th>
-            @Html.Label("Members")
-        </th>
-
-        <th>
-        </th>
-
-        <th>
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    @if(Model.Count() == 0)
     {
-<tr>
-
-    <td>
-        @Html.DisplayFor(modelItem => item.AspNetUser.Email)
-    </td>
-
-
-    <td>
-        @Html.DropDownList("members" + item.Id, new SelectList(""), htmlAttributes: new { @class = "form-control", @id = "grp" + item.Id })
-
-
-    </td>
-    <td>
-        <button id="@item.Id" onclick='showMembers(this.id)' class="btn-sm btn-primary">show members</button>
-
-    </td>
-    
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-    </td>
-</tr>
+    <h1 class="text-center danger">No Data for now!!!</h1>
     }
+    <table class="table">
+        @if (Model.Count() > 0)
+        {
+            <tr>
+
+                <th>
+                    @Html.DisplayName("Email Encadrant")
+                </th>
+
+                <th>
+                    @Html.Label("Members")
+                </th>
+
+                <th>
+                </th>
+
+                <th>
+                </th>
+            </tr>
+        }
 
 
-    
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
 
-@section Scripts{
-    <script type="text/javascript">
+                <td>
+                    @Html.DisplayFor(modelItem => item.AspNetUser.Email)
+                </td>
+
+
+                <td>
+                    @Html.DropDownList("members" + item.Id, new SelectList(""), htmlAttributes: new { @class = "form-control", @id = "grp" + item.Id })
+
+
+                </td>
+                <td>
+                    <button id="@item.Id" onclick='showMembers(this.id)' class="btn-sm btn-primary">show members</button>
+
+                </td>
+
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+
+
+    </table>
+
+    @section Scripts{
+        <script type="text/javascript">
         function showMembers(idGrp) {
             console.log("wooooooooow");
             var idList = 'grp' + idGrp;
@@ -85,13 +93,13 @@
                         console.log(item.FirstName)
                         //select.append($("<option>").val(item.FirstName).text(item.FirstName));
                     });
-                    
+
                 },
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     console.log("errrrrr");
                 }
             });
         }
-    </script>
-}
-    </div>
+        </script>
+    }
+</div>
