--- a/realMiniProjet/Views/HandlingProfessors/Index.cshtml
+++ b/realMiniProjet/Views/HandlingProfessors/Index.cshtml
@@ -4,12 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Professors</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@if(Model.Count() == 0)
+{
+<h1 class="text-center danger">No Data for now!!!</h1>
+}
 <table class="table">
+    @if(Model.Count() > 0)
+    {
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -29,32 +35,35 @@
         </th>
         <th></th>
     </tr>
+    }
+    
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-      
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-       
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
