--- a/realMiniProjet/Views/HandlingStudents/Index.cshtml
+++ b/realMiniProjet/Views/HandlingStudents/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Students</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -18,7 +18,7 @@
 }
 
 <table class="table">
-    @if (Model.Count() != 0)
+    @if (Model.Count() > 0)
     {
         <tr>
             <th>
